@@ -745,9 +745,6 @@ fli_scale_form( FL_FORM * form,
         obj->y = FL_crnd( obj->ft1 );
         obj->w = FL_crnd( obj->fl2 - obj->fl1 );
         obj->h = FL_crnd( obj->ft2 - obj->ft1 );
-
-        if ( fli_inverted_y )
-            obj->y = form->h - obj->h - obj->y;
     }
 
     /* Only notify objects now - parent objects might have to adjust
